Fix z-index of info-panel divs over formula tree verdict containers.

--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -74,6 +74,7 @@ div.left-column {
     margin-top: -20px;
     margin-left: 400px;
     width: 200px;
+    z-index: 2000;
 }
 
 div:hover > .tooltip, span:hover > .tooltip {
@@ -160,4 +161,5 @@ a.badge.active {
     margin-top: -20px;
     width: 500px;
     height: 170px;
+    z-index: 1000;
 }
